--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,16 @@ on:
 
 jobs:
   repovisualize:
+    name: visualize the repo
+    runs-on: ubuntu-latest
     steps:
-      name: Repo Visualizer
-      # You may pin to the exact commit or the version.
-      # uses: githubocto/repo-visualizer@a999615bdab757559bf94bda1fe6eef232765f85
-      uses: githubocto/repo-visualizer@0.9.1
-      with:
-        # A path (relative to the root of your repo) to where you would like the diagram to live. For example: images/diagram.svg. Default: diagram.svg
-        output_file: diagrap.svg
-        # If given, the name of an artifact to be created containing the diagram. Default: don't create an artifact.
-        artifact_name: true
+       - name: Repo Visualizer
+        # You may pin to the exact commit or the version.
+        # uses: githubocto/repo-visualizer@a999615bdab757559bf94bda1fe6eef232765f85
+         uses: githubocto/repo-visualizer@0.9.1
+         with:
+          # A path (relative to the root of your repo) to where you would like the diagram to live. For example: images/diagram.svg. Default: diagram.svg
+          output_file: diagrap.svg
+          # If given, the name of an artifact to be created containing the diagram. Default: don't create an artifact.
+          artifact_name: true
           
