--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
         - name: Repo Visualizer
           # You may pin to the exact commit or the version.
           # uses: githubocto/repo-visualizer@a999615bdab757559bf94bda1fe6eef232765f85
           uses: githubocto/repo-visualizer@0.9.1
           with:
+              # A path (relative to the root of your repo) to where you would like the diagram to live. For example: images/diagram.svg. Default: diagram.svg
+              output_file: diagram.svg
+              # Whether to push the new commit back to the repository. Must be true or false. Default: true
+              should_push: false
               # If given, the name of an artifact to be created containing the diagram. Default: don't create an artifact.
-              artifact_name: true
+              artifact_name: image
           
